--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 	path = opt/asio
 	url = https://github.com/chriskohlhoff/asio.git
 
+[submodule "opt/gdb"]
+	path = opt/gdb
+	url = https://github.com/chengmiao/gdb.git
